<resources>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to red</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_lyrics">Go to Lyrics</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add Time Framed Lyrics</string>
    <string name="added_song_count_to_playlist">Added %1$d song(s) to %2$s</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_md3_name">MD3</string>
    <string name="app_widget_small_name">Small</string>
    <string name="app_widget_text_name">Minimal Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_fade_duration">Audio fade duration</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="backup_restore_settings_summary">Backup and restore your settings, playlists</string>
    <string name="backup_restore_title">
        <![CDATA[Backup & Restore]]>
    </string>
    <string name="backup_title">Backups</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="bluetooth_summary">The app needs nearby devices permission to check for bluetooth devices</string>
    <string name="bluetooth_title">Nearby devices</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_success">Bug report successful</string>
    <string name="general_settings_summary">Change the theme and colors of the app</string>
    <string name="general_settings_title">Look and feel</string>
    <string name="image_settings_summary">Change artist image download settings</string>
    <string name="library_categories">Library categories</string>
    <string name="now_playing">Now playing</string>
    <string name="pref_header_album">Album style</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_controls">Controls</string>
    <string name="pref_header_general">Theme</string>
    <string name="pref_header_images">Images</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_lockscreen">Lockscreen</string>
    <string name="pref_keep_screen_on_summary">Keep in mind that enabling this feature may affect battery life</string>
    <string name="pref_language_name">Select language</string>
    <string name="pref_summary_album_art_on_lockscreen">Use the currently playing song album cover as the lockscreen wallpaper</string>
    <string name="pref_summary_blurred_album_art">Blur the album cover on the lockscreen. Can cause problems with third party apps and widgets</string>
    <string name="pref_summary_colored_app">The background and control button colors change according to the album art from the now playing screen</string>
    <string name="pref_summary_desaturated_color">As per Material Design guide lines in dark mode colors should be desaturated</string>
    <string name="pref_summary_expand_now_playing_panel">Clicking on the notification will show now playing screen instead of the home screen</string>
    <string name="pref_summary_extra_controls">Add extra controls for mini player</string>
    <string name="pref_summary_extra_song_info">Show extra Song information, such as file format, bitrate and frequency</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="pref_summary_lock_screen">Use Resofy\'s custom lockscreen controls</string>
    <string name="pref_summary_pause_history">When enabled, newly played songs won\'t show in history</string>
    <string name="pref_summary_remember_tab">Navigate to the last used tab on start</string>
    <string name="pref_summary_enable_search_playlist">Show a search field in a playlist</string>
    <string name="pref_summary_suggestions">Show New Music Mix on homescreen</string>
    <string name="pref_summary_swipe_anywhere_now_playing">Enables changing song by swiping anywhere on the now playing screen</string>
    <string name="pref_summary_swipe_to_dismiss">Swipe down to dismiss mini player</string>
    <string name="pref_summary_toggle_full_screen">Immersive mode</string>
    <string name="pref_summary_toggle_volume">If enough space is available, show volume controls in the now playing screen</string>
    <string name="pref_summary_wallpaper_accent">Extract accent color from wallpaper</string>
    <string name="pref_title_album_art_on_lockscreen">Show album cover</string>
    <string name="pref_title_album_cover_transform">Album cover skip</string>
    <string name="pref_title_appbar_mode">Header style</string>
    <string name="pref_title_blurred_album_art">Blur album cover</string>
    <string name="pref_title_circle_button">Circular play button</string>
    <string name="pref_title_colored_app">Adaptive color</string>
    <string name="pref_title_custom_font">Use Manrope font</string>
    <string name="pref_title_desaturated_color">Desaturated color</string>
    <string name="pref_title_expand_now_playing_panel">Show now playing screen</string>
    <string name="pref_title_extra_controls">Extra controls</string>
    <string name="pref_title_extra_song_info">Song info</string>
    <string name="pref_title_general_theme">App theme</string>
    <string name="pref_title_home_album_grid_style">Album grid</string>
    <string name="pref_title_home_artist_grid_style">Artist grid</string>
    <string name="pref_title_lock_screen">Fullscreen controls</string>
    <string name="pref_title_lyrics_screen_on">Keep screen on when showing lyrics</string>
    <string name="pref_title_lyrics_type">Lyrics type</string>
    <string name="pref_title_now_playing_screen_appearance">Now playing theme</string>
    <string name="pref_title_pause_history">Pause history</string>
    <string name="pref_title_remember_tab">Remember last tab</string>
    <string name="pref_title_enable_search_playlist">Enable search in playlist</string>
    <string name="pref_title_suggestions">Show suggestions</string>
    <string name="pref_title_swipe_anywhere_now_playing">Swipe anywhere to change song</string>
    <string name="pref_title_swipe_to_dismiss">Dismiss with swipe down</string>
    <string name="pref_title_tab_text_mode">Tab titles mode</string>
    <string name="pref_title_toggle_full_screen">Fullscreen app</string>
    <string name="pref_title_toggle_volume">Volume controls</string>
    <string name="pref_title_wallpaper_accent">Wallpaper accent color</string>
    <string name="window">Window</string>
    <string name="music_providers">Music Providers</string>
</resources>