<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ── Apariencia ── -->
    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_general">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="auto"
            android:entries="@array/pref_general_theme_list_titles"
            android:entryValues="@array/pref_general_theme_list_values"
            android:key="general_theme"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_general_theme"
            app:icon="@drawable/ic_palette_outline" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="custom_font"
            android:layout="@layout/list_item_view_switch_no_title"
            android:title="@string/pref_title_custom_font" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="wallpaper_accent"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_wallpaper_accent"
            android:title="@string/pref_title_wallpaper_accent" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEColorPreference
            android:key="accent_color"
            android:layout="@layout/list_item_color_view"
            android:persistent="false"
            android:summary="@string/accent_color_desc"
            android:title="@string/accent_color"
            app:icon="@drawable/ic_colorize" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="desaturated_color"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_desaturated_color"
            android:title="@string/pref_title_desaturated_color" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="adaptive_color_app"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_colored_app"
            android:title="@string/pref_title_colored_app" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <!-- ── Reproduciendo ahora ── -->
    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/now_playing">

        <com.resofy.music.preferences.NowPlayingScreenPreference
            android:key="now_playing_screen_id"
            android:layout="@layout/list_item_view"
            android:title="@string/pref_title_now_playing_screen_appearance"
            app:icon="@drawable/ic_play_circle_filled" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="extra_song_info"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_extra_song_info"
            android:title="@string/pref_title_extra_song_info" />


        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_lyrics_type_entries"
            android:entryValues="@array/pref_lyrics_type_values"
            android:key="lyrics_type"
            android:layout="@layout/list_item_view"
            android:title="@string/pref_title_lyrics_type" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="screen_on_lyrics"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_keep_screen_on_summary"
            android:title="@string/pref_title_lyrics_screen_on" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="circle_play_button"
            android:layout="@layout/list_item_view_switch_no_title"
            android:title="@string/pref_title_circle_button" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="swipe_anywhere_now_playing"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_swipe_anywhere_now_playing"
            android:title="@string/pref_title_swipe_anywhere_now_playing" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/pref_header_album">

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
                android:defaultValue="0"
                android:entries="@array/pref_album_cover_transform_entries"
                android:entryValues="@array/pref_album_cover_transform_values"
                android:key="album_cover_transform"
                android:layout="@layout/list_item_view"
                android:title="@string/pref_title_album_cover_transform" />

        </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/pref_header_controls">

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:layout="@layout/list_item_view_switch"
                app:defaultValue="false"
                app:key="swipe_to_dismiss"
                app:summary="@string/pref_summary_swipe_to_dismiss"
                app:title="@string/pref_title_swipe_to_dismiss" />

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:layout="@layout/list_item_view_switch"
                app:defaultValue="false"
                app:icon="@drawable/ic_play_arrow"
                app:key="toggle_add_controls"
                app:summary="@string/pref_summary_extra_controls"
                app:title="@string/pref_title_extra_controls" />

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:layout="@layout/list_item_view_switch"
                app:defaultValue="false"
                app:icon="@drawable/ic_volume_up"
                app:key="toggle_volume"
                app:summary="@string/pref_summary_toggle_volume"
                app:title="@string/pref_title_toggle_volume" />

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:layout="@layout/list_item_view_switch"
                app:defaultValue="false"
                app:icon="@drawable/ic_expand_less"
                app:key="expand_now_playing_panel"
                app:summary="@string/pref_summary_expand_now_playing_panel"
                app:title="@string/pref_title_expand_now_playing_panel" />


        </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <!-- ── Biblioteca ── -->
    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_library">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="toggle_suggestions"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_suggestions"
            android:title="@string/pref_title_suggestions" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="pause_history"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_pause_history"
            android:title="@string/pref_title_pause_history" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_home_grid_style_list_titles"
            android:entryValues="@array/pref_home_grid_style_list_values"
            android:key="home_artist_grid_style"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_home_artist_grid_style"
            app:icon="@drawable/ic_home" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="4"
            android:entries="@array/pref_home_grid_style_list_titles"
            android:entryValues="@array/pref_home_grid_style_list_values"
            android:key="home_album_grid_style"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_home_album_grid_style" />

        <com.resofy.music.preferences.LibraryPreference
            android:key="library_categories"
            android:layout="@layout/list_item_view"
            android:summary="@string/pref_summary_library_categories"
            android:title="@string/library_categories"
            app:icon="@drawable/ic_library_music" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="remember_last_tab"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_remember_tab"
            android:title="@string/pref_title_remember_tab" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="enable_search_playlist"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_enable_search_playlist"
            android:title="@string/pref_title_enable_search_playlist" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="1"
            android:entries="@array/pref_tab_text_mode_titles"
            android:entryValues="@array/pref_tab_text_mode_values"
            android:key="tab_text_mode"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_tab_text_mode" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_appbar_mode_titles"
            android:entryValues="@array/pref_appbar_mode_values"
            android:key="appbar_mode"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_appbar_mode" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/window">

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:defaultValue="false"
                android:key="toggle_full_screen"
                android:layout="@layout/list_item_view_switch"
                android:summary="@string/pref_summary_toggle_full_screen"
                android:title="@string/pref_title_toggle_full_screen"
                app:icon="@drawable/ic_fullscreen" />

        </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
            android:layout="@layout/preference_category_title"
            android:title="@string/pref_header_lockscreen">

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:defaultValue="true"
                android:key="album_art_on_lock_screen"
                android:layout="@layout/list_item_view_switch"
                android:summary="@string/pref_summary_album_art_on_lockscreen"
                android:title="@string/pref_title_album_art_on_lockscreen" />

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:defaultValue="false"
                android:dependency="album_art_on_lock_screen"
                android:key="blurred_album_art"
                android:layout="@layout/list_item_view_switch"
                android:summary="@string/pref_summary_blurred_album_art"
                android:title="@string/pref_title_blurred_album_art" />

            <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
                android:defaultValue="false"
                android:key="lock_screen"
                android:layout="@layout/list_item_view_switch"
                android:summary="@string/pref_summary_lock_screen"
                android:title="@string/pref_title_lock_screen" />

        </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>